# sandbox_duck_db

./: README.md  pyproject.toml  simple.py
data/: recipes.csv
databases/sandbox/: bank.parquet  income.parquet  iris.parquet  load.sql  nyctaxifares.parquet  recipes.parquet  schema.sql
